# hokuyo

./: README.md
catkin_ws/src/bob_prototype/bob_boustrophedon/: CMakeLists.txt  package.xml
catkin_ws/src/bob_prototype/bob_boustrophedon/include/bob_boustrophedon/: boustrophedon.h  boustrophedon_condition.h  boustrophedon_curve_spaces.h  boustrophedon_executor.h  boustrophedon_subtask_executor.h  boustrophedon_task_parameters.h
catkin_ws/src/bob_prototype/bob_boustrophedon/src/: boustrophedon.cpp  boustrophedon_condition.cpp  boustrophedon_curve_spaces.cpp  boustrophedon_executor.cpp  boustrophedon_subtask_executor.cpp  boustrophedon_task_parameters.cpp
catkin_ws/src/bob_prototype/bob_config/: CMakeLists.txt  package.xml
catkin_ws/src/bob_prototype/bob_config/include/bob_config/: config.h
catkin_ws/src/bob_prototype/bob_config/param/: config.yaml  kobuki.yaml
catkin_ws/src/bob_prototype/bob_config/src/: config.cpp
catkin_ws/src/bob_prototype/bob_control/: CMakeLists.txt  package.xml
catkin_ws/src/bob_prototype/bob_control/include/bob_control/: accelerate_controller.h  control_result.h  controller_runner.h  curve_heading.h  curve_planner.h  curve_to_line_controller.h  curve_tools.h  curved_path_executor.h  curved_subtask_executor.h  icontroller.h  ipath_executor.h  ivelocity_publisher.h  line_pid_controller.h  linear_accelerate_controller.h  pid_controller.h  recovery_behavior.h  robot_remote.h  rotate_parallel_to_wall.h  rotation_controller.h  runnable.h  simple_commander.h  simple_commands.h  straight_driver.h  straight_path_executor.h  unsafe_range_calculator.h  velocity_repeater.h  velocity_smoother.h  wall_follow_side.h
catkin_ws/src/bob_prototype/bob_control/src/: accelerate_controller.cpp  control_result.cpp  controller_runner.cpp  curve_heading.cpp  curve_planner.cpp  curve_to_line_controller.cpp  curve_tools.cpp  curved_path_executor.cpp  curved_subtask_executor.cpp  line_pid_controller.cpp  linear_accelerate_controller.cpp  pid_controller.cpp  recovery_behavior.cpp  robot_remote.cpp  rotate_parallel_to_wall.cpp  rotation_controller.cpp  simple_commander.cpp  straight_driver.cpp  straight_path_executor.cpp  unsafe_range_calculator.cpp  velocity_repeater.cpp  velocity_smoother.cpp
catkin_ws/src/bob_prototype/bob_control/src/commands/: accelerate_command.cpp  curve_command.cpp  heading_rotation_command.cpp  isimple_command.cpp  stop_command.cpp  track_line_command.cpp  velocity_repeater_command.cpp
catkin_ws/src/bob_prototype/bob_control/src/conditions/: anded_condition.cpp  bumper_condition.cpp  composite_condition.cpp  controller_loop_condition.cpp  distance_condition.cpp  distance_robot_direction_condition.cpp  distance_world_direction_condition.cpp  front_obstacle_condition.cpp  function_pointer_condition.cpp  half_space_condition.cpp  heading_condition.cpp  null_condition.cpp  ored_condition.cpp  pointing_to_goal_condition.cpp  proximity_condition.cpp  velocity_condition.cpp
catkin_ws/src/bob_prototype/bob_control_handle/: CMakeLists.txt  package.xml
catkin_ws/src/bob_prototype/bob_control_handle/include/bob_control_handle/: control_handle.h
catkin_ws/src/bob_prototype/bob_control_handle/src/: control_handle.cpp
catkin_ws/src/bob_prototype/bob_core/: CMakeLists.txt  package.xml
catkin_ws/src/bob_prototype/bob_core/include/bob_core/: .h  alternating_exploration_coverage.h  area_coverer.h  area_processor.h  obstacle_coverer.h  obstacles_coverer.h
catkin_ws/src/bob_prototype/bob_core/src/: alternating_exploration_coverage.cpp  area_coverer.cpp  area_processor.cpp  obstacle_coverer.cpp  obstacles_coverer.cpp
catkin_ws/src/bob_prototype/bob_coverage/: CMakeLists.txt  package.xml
catkin_ws/src/bob_prototype/bob_coverage/include/bob_coverage/: area_chooser.h  area_tools.h  binary_map_area.h  coverable_area_tracker.h  (+6 more)
catkin_ws/src/bob_prototype/bob_coverage/src/: area_chooser.cpp  area_tools.cpp  binary_map_area.cpp  coverable_area_tracker.cpp  coverage_tracker.cpp  discrete_area.cpp  discrete_area_shapes.cpp  visualization.cpp  wall_chooser.cpp
catkin_ws/src/bob_prototype/bob_freertos_implementations/: CMakeLists.txt  package.xml
catkin_ws/src/bob_prototype/bob_freertos_implementations/src/: freertos_velocity_publisher.cpp
catkin_ws/src/bob_prototype/bob_frontier_exploration/: CMakeLists.txt  package.xml
catkin_ws/src/bob_prototype/bob_frontier_exploration/src/: frontier_chooser.cpp  frontier_cloud.cpp  frontier_condition.cpp  frontier_explorer.cpp  frontier_tracker.cpp  wavefront_frontier_locator.cpp
catkin_ws/src/bob_prototype/bob_grid_map/: CMakeLists.txt  package.xml
catkin_ws/src/bob_prototype/bob_grid_map/src/: concrete_inflated_map.cpp  concrete_map.cpp  costmap.cpp  counting_probability_cell.cpp  decay_probability_cell.cpp  distance_cache_matrix.cpp  location_mapper.cpp  map_location_set.cpp  toolbox.cpp
catkin_ws/src/bob_prototype/bob_high_level/: CMakeLists.txt  package.xml
catkin_ws/src/bob_prototype/bob_high_level/src/: demo.cpp
catkin_ws/src/bob_prototype/bob_launch/: CMakeLists.txt  package.xml
catkin_ws/src/bob_prototype/bob_launch/launch/: basic_map.launch  hokuyo.launch  imu.launch  kobuki_core.launch  kobuki_keyop.launch  rplidar.launch  scan_matcher.launch  slam.launch  teralidar.launch
catkin_ws/src/bob_prototype/bob_lidar/: CMakeLists.txt  package.xml
catkin_ws/src/bob_prototype/bob_lidar/src/: lidar_proximity_sensor.cpp  passable_range.cpp  util_functions.cpp
catkin_ws/src/bob_prototype/bob_main/: CMakeLists.txt  package.xml
catkin_ws/src/bob_prototype/bob_main/src/: motor_test.cpp
catkin_ws/src/bob_prototype/bob_map_algorithms/: CMakeLists.txt  package.xml
catkin_ws/src/bob_prototype/bob_map_algorithms/src/: closest_clear_point.cpp  helper_functions.cpp  map_functor.cpp  obstacle_locator.cpp  point_clear_for_navigation.cpp
catkin_ws/src/bob_prototype/bob_navigation/: CMakeLists.txt  package.xml
catkin_ws/src/bob_prototype/bob_navigation/src/: dijkstra_planner.cpp  navigation_manager.cpp  path_splitter.cpp
catkin_ws/src/bob_prototype/bob_sensor/: CMakeLists.txt  package.xml
(+482 files in other folders)
