<package>
  <name>bob_control</name>
  <version>0.0.0</version>
  <description>The bob_control package</description>

  <maintainer email="sebastian@bobsweep.com">Sebastian Schweigert</maintainer>

  <license>TODO</license>

  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>bob_config</build_depend>
  <build_depend>bob_grid_map</build_depend>
  <build_depend>bob_lidar</build_depend>
  <build_depend>bob_sensor</build_depend>
  <build_depend>bob_toolbox</build_depend>
  <build_depend>bob_visualization</build_depend>
  <build_depend>bob_system</build_depend>

  <run_depend>bob_config</run_depend>
  <run_depend>bob_grid_map</run_depend>
  <run_depend>bob_lidar</run_depend>
  <run_depend>bob_sensor</run_depend>
  <run_depend>bob_toolbox</run_depend>
  <run_depend>bob_visualization</run_depend>
  <run_depend>bob_system</run_depend>

  <export>
  </export>
</package>
