<?xml version="1.0"?>
<package>
  <name>bob_control_handle</name>
  <version>0.0.0</version>
  <description>The bob_control_handle package</description>

  <maintainer email="sebastian@todo.todo">sebastian</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>bob_control</build_depend>
  <build_depend>bob_sensor</build_depend>
  <build_depend>bob_navigation</build_depend>

  <run_depend>bob_control</run_depend>
  <run_depend>bob_sensor</run_depend>
  <run_depend>bob_navigation</run_depend>

  <export>
  </export>
</package>
