<?xml version="1.0"?>
<package>
  <name>bob_core</name>
  <version>0.0.0</version>
  <description>The bob_core package</description>

  <maintainer email="sebastian@todo.todo">sebastian</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>bob_lidar</build_depend>
  <build_depend>bob_toolbox</build_depend>
  <build_depend>bob_grid_map</build_depend>
  <build_depend>bob_control</build_depend>
  <build_depend>bob_config</build_depend>
  <build_depend>bob_coverage</build_depend>
  <build_depend>bob_sensor</build_depend>
  <build_depend>bob_control_handle</build_depend>
  <build_depend>bob_stc</build_depend>
  <build_depend>bob_frontier_exploration</build_depend>
  <build_depend>bob_map_algorithms</build_depend>
  <build_depend>bob_system</build_depend>

  <run_depend>bob_lidar</run_depend>
  <run_depend>bob_toolbox</run_depend>
  <run_depend>bob_grid_map</run_depend>
  <run_depend>bob_control</run_depend>
  <run_depend>bob_config</run_depend>
  <run_depend>bob_coverage</run_depend>
  <run_depend>bob_sensor</run_depend>
  <run_depend>bob_control_handle</run_depend>
  <run_depend>bob_stc</run_depend>
  <run_depend>bob_frontier_exploration</run_depend>
  <run_depend>bob_map_algorithms</run_depend>
  <run_depend>bob_system</run_depend>

  <export>

  </export>
</package>
