<package>
  <name>bob_freertos_implementations</name>
  <version>0.0.0</version>
  <description>Description not yet provided</description>

  <maintainer email="sebastian@bobsweep.com">Sebastian Schweigert</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>bob_toolbox</build_depend>
  <build_depend>bob_sensor</build_depend>
  <build_depend>bob_lidar</build_depend>
  <build_depend>bob_control</build_depend>

  <run_depend>bob_toolbox</run_depend>
  <run_depend>bob_sensor</run_depend>
  <run_depend>bob_lidar</run_depend>
  <run_depend>bob_control</run_depend>

  <export>
  </export>
</package>
