<package>
  <name>bob_frontier_exploration</name>
  <version>0.0.0</version>
  <description>Description not yet provided</description>

  <maintainer email="sebastian@bobsweep.com">Sebastian Schweigert</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>bob_config</build_depend>
  <build_depend>bob_grid_map</build_depend>
  <build_depend>bob_map_algorithms</build_depend>
  <build_depend>bob_toolbox</build_depend>
  <build_depend>bob_control</build_depend>
  <build_depend>bob_navigation</build_depend>

  <run_depend>bob_config</run_depend>
  <run_depend>bob_grid_map</run_depend>
  <run_depend>bob_map_algorithms</run_depend>
  <run_depend>bob_toolbox</run_depend>
  <run_depend>bob_control</run_depend>
  <run_depend>bob_navigation</run_depend>

  <export>
  </export>
</package>
