<package>
    <name>bob_grid_map</name>
    <version>1.0.0</version>
    <description>
        This package provides an implementation of a 2D costmap that takes in sensor
        data from the world, builds a 2D or 3D occupancy grid of the data (depending
        on whether a voxel based implementation is used), and inflates costs in a
        2D costmap based on the occupancy grid and a user specified inflation radius.
        This package also provides support for map_server based initialization of a
        costmap, rolling window based costmaps, and parameter based subscription to
        and configuration of sensor topics.
    </description>
    <author>Sebastian Schweigert</author>
  <maintainer email="sebastian@bobsweep.com">Sebastian Schweigert</maintainer>
    <license>To Kill</license>
    <url></url>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>bob_toolbox</build_depend>
    <build_depend>bob_config</build_depend>
    <build_depend>bob_system</build_depend>

    <run_depend>bob_toolbox</run_depend>
    <run_depend>bob_config</run_depend>
    <run_depend>bob_system</run_depend>

</package>
