<package>
  <name>bob_main</name>
  <version>0.0.0</version>
  <description>Description not yet provided</description>

  <maintainer email="sebastian@bobsweep.com">Sebastian Schweigert</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>bob_control</build_depend>
  <build_depend>bob_grid_map</build_depend>
  <build_depend>bob_freertos_implementations</build_depend>

  <run_depend>bob_control</run_depend>
  <run_depend>bob_grid_map</run_depend>
  <run_depend>bob_freertos_implementations</run_depend>

  <export>
  </export>
</package>
